// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render correctly 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-tyvr0z-StyledOutlinedButton:hover,
.css-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.css-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.css-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-3sara7-StyledOutlinedButton:hover,
.css-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.css-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ulwsob-StyledOutlinedButton:hover,
.css-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="css-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 2"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-1tanet4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.css-1tanet4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13qtehh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-13qtehh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="css-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="css-13qtehh-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="css-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 2`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-1tanet4-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.css-1tanet4-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-13qtehh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-13qtehh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="css-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="css-13qtehh-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="css-1tanet4-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ulwsob-StyledOutlinedButton:hover,
.css-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.css-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-3sara7-StyledOutlinedButton:hover,
.css-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.css-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-tyvr0z-StyledOutlinedButton:hover,
.css-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="css-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageClick 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-ulwsob-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-ulwsob-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-ulwsob-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ulwsob-StyledOutlinedButton:hover,
.css-ulwsob-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-3sara7-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #3f4250;
}

.css-3sara7-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-3sara7-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-3sara7-StyledOutlinedButton:hover,
.css-3sara7-StyledOutlinedButton:active {
  background: #e9eaeb;
  color: #222638;
  border: 1px solid #92959d;
}

.css-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-tyvr0z-StyledOutlinedButton:hover,
.css-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 1"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 2"
        class="css-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="css-3sara7-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-ulwsob-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .css-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.css-1qihu3b-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.css-1qihu3b-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.css-tyvr0z-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-tyvr0z-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-tyvr0z-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-tyvr0z-StyledOutlinedButton:hover,
.css-tyvr0z-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

<div
    class="css-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.21967 7.46967C2.92678 7.76256 2.92678 8.23744 3.21967 8.53033L6.46967 11.7803C6.76256 12.0732 7.23744 12.0732 7.53033 11.7803C7.82322 11.4874 7.82322 11.0126 7.53033 10.7197L4.81066 8L7.53033 5.28033C7.82322 4.98744 7.82322 4.51256 7.53033 4.21967C7.23744 3.92678 6.76256 3.92678 6.46967 4.21967L3.21967 7.46967ZM11.4697 4.21967L8.21967 7.46967C7.92678 7.76256 7.92678 8.23744 8.21967 8.53033L11.4697 11.7803C11.7626 12.0732 12.2374 12.0732 12.5303 11.7803C12.8232 11.4874 12.8232 11.0126 12.5303 10.7197L9.81066 8L12.5303 5.28033C12.8232 4.98744 12.8232 4.51256 12.5303 4.21967C12.2374 3.92678 11.7626 3.92678 11.4697 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.5303 4.21967C10.8232 4.51256 10.8232 4.98744 10.5303 5.28033L7.81066 8L10.5303 10.7197C10.8232 11.0126 10.8232 11.4874 10.5303 11.7803C10.2374 12.0732 9.76256 12.0732 9.46967 11.7803L6.21967 8.53033C5.92678 8.23744 5.92678 7.76256 6.21967 7.46967L9.46967 4.21967C9.76256 3.92678 10.2374 3.92678 10.5303 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="css-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="css-tyvr0z-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
    </div>
    <div
      class="css-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.21967 4.21967C6.51256 3.92678 6.98744 3.92678 7.28033 4.21967L10.5303 7.46967C10.8232 7.76256 10.8232 8.23744 10.5303 8.53033L7.28033 11.7803C6.98744 12.0732 6.51256 12.0732 6.21967 11.7803C5.92678 11.4874 5.92678 11.0126 6.21967 10.7197L8.93934 8L6.21967 5.28033C5.92678 4.98744 5.92678 4.51256 6.21967 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="css-1qihu3b-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="css-1d5u3w3-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.7803 7.46967C13.0732 7.76256 13.0732 8.23744 12.7803 8.53033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803C8.17678 11.4874 8.17678 11.0126 8.46967 10.7197L11.1893 8L8.46967 5.28033C8.17678 4.98744 8.17678 4.51256 8.46967 4.21967C8.76256 3.92678 9.23744 3.92678 9.53033 4.21967L12.7803 7.46967ZM4.53033 4.21967L7.78033 7.46967C8.07322 7.76256 8.07322 8.23744 7.78033 8.53033L4.53033 11.7803C4.23744 12.0732 3.76256 12.0732 3.46967 11.7803C3.17678 11.4874 3.17678 11.0126 3.46967 10.7197L6.18934 8L3.46967 5.28033C3.17678 4.98744 3.17678 4.51256 3.46967 4.21967C3.76256 3.92678 4.23744 3.92678 4.53033 4.21967Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
